update readme with link

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "typescript-as-prop",
+  "name": "polymorphic-ts-examples",
   "version": "1.0.0",
   "description": "",
   "keywords": [],
