--- a/package.json
+++ b/package.json
@@ -5,13 +5,13 @@
   "keywords": [],
   "main": "src/index.tsx",
   "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "18.1.0",
+    "react-dom": "18.1.0",
     "react-scripts": "4.0.3"
   },
   "devDependencies": {
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "18.0.11",
+    "@types/react-dom": "18.0.5",
     "typescript": "4.4.2"
   },
   "scripts": {
