--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "react-scripts": "4.0.3"
   },
   "devDependencies": {
-    "@types/react": "17.0.45",
-    "@types/react-dom": "17.0.17",
+    "@types/react": "^16",
+    "@types/react-dom": "^16",
     "typescript": "4.4.2"
   },
   "scripts": {
